fixed animations on drop down mobile, need to fix animations for collapse

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   font-weight: normal;
   font-style: normal;
 }
+/* https://www.happyhues.co/palettes/14 */
 :root {
   --main-bg-color: #fffffe;
   --main-hdr-color: #272343;
@@ -26,40 +27,6 @@
   background-color: var(--main-bg-color);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-
-
-
-/* https://www.happyhues.co/palettes/14 */
-html, body{
-  margin: 0;
-  padding: 0;
-}
 
 /* Add a black background color to the top navigation */
 .navigation {
@@ -106,21 +73,27 @@ html, body{
   grid-template-areas: "col1 col2 col3";
 }
 .floating-Card{
-  margin: auto;
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
-  width: 85%;
-  height: 250px;
   border-radius: 15px;
   border: 3px solid var(--main-stroke-color);
   box-shadow: 0.5em 0.5em rgb(70, 70, 70);
   background-color: white;
+
+  margin: auto;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+ 
   overflow: hidden;
   text-decoration: none;
+
   grid-template-columns: repeat(3, auto);
   grid-template-rows: none;
   grid-row-gap: 4em;
-  transition: height 0.5s;
+
+  width: 85%;
+  height: 250px;
+
+  max-height: 320px;
+  transition: max-height 1s;
 }
 .floating-Card-Overlay{
   margin: auto;
@@ -151,6 +124,7 @@ html, body{
   overflow: hidden;
   text-decoration: none;
 }
+
 .Overlay {
   justify-content: center;
   position: fixed; /* Sit on top of the page content */
@@ -167,7 +141,6 @@ html, body{
 }
 .Overlay.expanded {
   display: block;
-
 }
 
 .project-title {
@@ -187,6 +160,10 @@ html, body{
   float: right;
   cursor: pointer;
 }
+.project-info-header {
+  width: 100%;
+  margin-bottom: 1em;
+}
 
 .project-modifiedDate {
   margin-top: 5px;
@@ -202,7 +179,9 @@ html, body{
 }
 
 .project-image {
+  justify-content: center;
   max-width: 400px;
+  max-height: 180px;
   width: 70%;
   margin-left: auto;
   margin-right: auto;
@@ -211,6 +190,7 @@ html, body{
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+  max-height: 174px;
   margin-top: 0.5em;
 }
 
@@ -233,7 +213,6 @@ html, body{
   margin-bottom: 1em;
   border-radius: 5px;
 }
-
 
 .title {
   background-color: var(--main-tertiary-color);
@@ -290,7 +269,7 @@ button{
 .Burger {
   display: none;
 }
-@media (max-width: 600px) {
+@media (max-width: 710px) {
   .navigation {
     grid-template-areas: "logo buger" "navigation-sub navigation-sub";
   }
@@ -303,19 +282,34 @@ button{
     height: 200px;
   }
   .Cards {
+    margin-left: 0;
+    margin-right: 0;
     width: 100%;
     margin: 0 auto;
     grid-template-areas: "personal" "school";
   }
   .floating-Card{
     width: 80%;
-    height: auto;
+    height: 240px;
+    margin-top: 0.75em;
+    margin-bottom: 0.75em;
     grid-template-columns: none;
     grid-template-rows: repeat(1, auto);
     grid-row-gap: 4em;
+    max-height: 240px;
+    transition: max-height 1s;
+  }
+  .floating-Card.expanded {
+    height: auto;
+    max-height: 600px;
   }
   .project-image{
-    width: 80%;
+    padding-top: 1em;
+    width: 100%;
+  }
+  .project-image img {
+    margin: 0;
+    max-width: 275px;
   }
   .item {
     width: 100%;
@@ -326,20 +320,10 @@ button{
     height: 47px;
   }
 
-  .Cards {
-    margin-left: 0;
-    margin-right: 0;
-  }
-  .floating-Card{
-    margin-top: 0.75em;
-    margin-bottom: 0.75em;
-  }
-  .floating-Card.expanded {
-    height: auto;
-  }
+
 }
 
-@media (min-width: 600px) {
+@media (min-width: 710px) {
   .Cards {
     width: 95%;
     margin: 0 auto;
@@ -348,12 +332,14 @@ button{
   .floating-Card{
     width: 80%;
     height: auto;
+    max-height: 240px;
     grid-template-columns: repeat(2, auto);
     grid-template-rows: none;
     grid-row-gap: 4em;
   }
   .project-image{
     width: 90%;
+    max-width: 275px;
   }
   .floating-Card-Overlay{
     height: auto;
